# depended-chat

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_tables.py  443ec278cab1_add_cheking_for_uniqueness_for_chats.py  7eca4eafbb19_fix_timezone.py  9f3f7e6a1c2b_add_mvp_direct_chats.py  a1b2c3d4e5f6_add_user_profile_fields.py  bb608bf50977_add_default_parametr_for_ids.py  c9c521647d0e_change_ip_column_to_inet.py  ce1ed2578abd_create_tables.py  d4e5f6a7b8c9_add_message_edit_and_soft_delete_fields.py  e7f8a9b0c1d2_add_firebase_device_tokens.py  ec60b85195b7_create_tables.py
docker/: entrypoint.sh
docker/postgres/: pg_hba.conf
http_tests/: auth.http  chats.http
nginx/: default.conf
src/: __init__.py  config.py  database.py  logger.py  main.py
src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  security.py  service.py  utils.py  ws_auth.py
src/broker/: rabbitmq.py
src/chat/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py  ws_manager.py  ws_router.py  ws_schemas.py
src/core/: error_handlers.py
src/devices/: models.py  router.py  schemas.py  service.py
src/notifications/: firebase_service.py
src/users/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_auth.py  test_chat.py  test_push_fallback.py  test_user_profile.py  test_websockets_broadcast.py  test_websockets_chat.py  test_websockets_events.py
(+3 files in other folders)
